--- a/android_app/Watr/app/src/main/res/layout/fragment_quality_selector_dialog.xml
+++ b/android_app/Watr/app/src/main/res/layout/fragment_quality_selector_dialog.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="watr.hack.watr.QualitySelectorDialog">
+             tools:context="watr.hack.watr.StringSelectorDialog">
 
     <TextView
         android:layout_width="match_parent"
