--- a/android_app/Watr/app/src/main/res/layout/activity_report.xml
+++ b/android_app/Watr/app/src/main/res/layout/activity_report.xml
@@ -4,22 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="watr.hack.watr.ReportActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:orientation="vertical"
         android:showDividers="middle"
         android:divider="@drawable/dividor"
         android:id="@+id/linearLayout">
 
         <TextView
-            android:id="@+id/selectColorButton"
+            android:id="@+id/selectColorItem"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:textSize="16sp"
@@ -30,8 +30,8 @@
             android:gravity="center_vertical|start"
             android:hint="select water color"/>
 
-        <EditText
-            android:id="@+id/zipEdit"
+        <TextView
+            android:id="@+id/selectSmellItem"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:textSize="16sp"
@@ -40,10 +40,10 @@
             android:singleLine="true"
             android:background="@null"
             android:gravity="center_vertical|start"
-            android:hint="Enter zip code, like 01609"/>
+            android:hint="select water smell"/>
 
         <TextView
-            android:id="@+id/selectQualityButton"
+            android:id="@+id/selectTasteItem"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:textSize="16sp"
@@ -52,18 +52,66 @@
             android:singleLine="true"
             android:background="@null"
             android:gravity="center_vertical|start"
-            android:hint="select quality"
-            android:text="w"/>
+            android:hint="select water taste"/>
+
+        <TextView
+            android:id="@+id/selectpHItem"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:textSize="16sp"
+            android:paddingLeft="16dp"
+            android:paddingTop="8dp"
+            android:singleLine="true"
+            android:background="@null"
+            android:gravity="center_vertical|start"
+            android:hint="select pH"/>
+
+        <TextView
+            android:id="@+id/selectLeadItem"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:textSize="16sp"
+            android:paddingLeft="16dp"
+            android:paddingTop="8dp"
+            android:singleLine="true"
+            android:background="@null"
+            android:gravity="center_vertical|start"
+            android:hint="select lead"/>
+
+        <TextView
+            android:id="@+id/zipcodeItem"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:textSize="16sp"
+            android:paddingLeft="16dp"
+            android:paddingTop="8dp"
+            android:singleLine="true"
+            android:background="@null"
+            android:gravity="center_vertical|start"
+            android:hint="enter your zipcode"/>
+
     </LinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
-        android:id="@+id/submitReportButton"
-        android:layout_gravity="right"
+        android:id="@+id/submit_frame"
+        android:background="?attr/colorPrimaryDark"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentStart="true">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:text="Submit"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:id="@+id/submit_button"
+            android:layout_gravity="right"
+            android:layout_alignBottom="@+id/frameLayout"
+            android:layout_alignEnd="@+id/linearLayout"/>
+    </FrameLayout>
 
 </RelativeLayout>
