--- a/android_app/Watr/app/src/main/res/layout/activity_report.xml
+++ b/android_app/Watr/app/src/main/res/layout/activity_report.xml
@@ -6,110 +6,202 @@
     android:layout_height="match_parent"
     tools:context="watr.hack.watr.ReportActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:orientation="vertical"
-        android:showDividers="middle"
-        android:divider="@drawable/dividor"
-        android:id="@+id/linearLayout">
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/selectColorItem"
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:textSize="16sp"
-            android:paddingLeft="16dp"
-            android:paddingTop="8dp"
-            android:singleLine="true"
-            android:background="@null"
-            android:gravity="center_vertical|start"
-            android:hint="select water color"/>
+            android:layout_height="wrap_content"
+            android:divider="@drawable/dividor"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:showDividers="middle">
 
-        <TextView
-            android:id="@+id/selectSmellItem"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:textSize="16sp"
-            android:paddingLeft="16dp"
-            android:paddingTop="8dp"
-            android:singleLine="true"
-            android:background="@null"
-            android:gravity="center_vertical|start"
-            android:hint="select water smell"/>
+            <LinearLayout
+                android:id="@+id/selectColorItem"
+                android:layout_width="match_parent"
+                android:layout_height="72dp"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/selectTasteItem"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:textSize="16sp"
-            android:paddingLeft="16dp"
-            android:paddingTop="8dp"
-            android:singleLine="true"
-            android:background="@null"
-            android:gravity="center_vertical|start"
-            android:hint="select water taste"/>
+                <TextView
+                    android:id="@+id/selectColorLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="72dp"
+                    android:paddingTop="8dp"
+                    android:text="Color"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp"/>
 
-        <TextView
-            android:id="@+id/selectpHItem"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:textSize="16sp"
-            android:paddingLeft="16dp"
-            android:paddingTop="8dp"
-            android:singleLine="true"
-            android:background="@null"
-            android:gravity="center_vertical|start"
-            android:hint="select pH"/>
+                <TextView
+                    android:id="@+id/selectColorValue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Clear"
+                    android:paddingBottom="4dp"
+                    android:paddingLeft="72dp"
+                    android:paddingTop="4dp"
+                    android:textColor="@color/gray"
+                    android:textSize="14sp"/>
 
-        <TextView
-            android:id="@+id/selectLeadItem"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:textSize="16sp"
-            android:paddingLeft="16dp"
-            android:paddingTop="8dp"
-            android:singleLine="true"
-            android:background="@null"
-            android:gravity="center_vertical|start"
-            android:hint="select lead"/>
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/zipcodeItem"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:textSize="16sp"
-            android:paddingLeft="16dp"
-            android:paddingTop="8dp"
-            android:singleLine="true"
-            android:background="@null"
-            android:gravity="center_vertical|start"
-            android:hint="enter your zipcode"/>
+            <LinearLayout
+                android:id="@+id/selectSmellItem"
+                android:layout_width="match_parent"
+                android:layout_height="72dp"
+                android:orientation="vertical">
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/selectSmellLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="72dp"
+                    android:paddingTop="16dp"
+                    android:text="Smell"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp"/>
+
+                <TextView
+                    android:id="@+id/selectSmellValue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="4dp"
+                    android:paddingLeft="72dp"
+                    android:paddingTop="4dp"
+                    android:text="Neutral"
+                    android:textColor="@color/gray"
+                    android:textSize="14sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/selectTasteItem"
+                android:layout_width="match_parent"
+                android:layout_height="72dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/selectTasteLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="72dp"
+                    android:paddingTop="16dp"
+                    android:text="Taste"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp"/>
+
+                <TextView
+                    android:id="@+id/selectTasteValue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="4dp"
+                    android:paddingLeft="72dp"
+                    android:paddingTop="4dp"
+                    android:text="Neutral"
+                    android:textColor="@color/gray"
+                    android:textSize="14sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/selectpHItem"
+                android:layout_width="match_parent"
+                android:layout_height="72dp"
+                android:orientation="vertical">
+
+                <TextView
+                             android:id="@+id/selectpHLabel"
+                             android:layout_width="match_parent"
+                             android:layout_height="wrap_content"
+                             android:paddingLeft="72dp"
+                             android:paddingTop="16dp"
+                             android:text="pH"
+                             android:textColor="@android:color/black"
+                             android:textSize="16sp"/>
+
+                <TextView
+                    android:id="@+id/selectpHValue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="4dp"
+                    android:paddingLeft="72dp"
+                    android:paddingTop="4dp"
+                    android:text="Neutral"
+                    android:textColor="@color/gray"
+                    android:textSize="14sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+
+                android:id="@+id/selectLeadItem"
+                android:layout_width="match_parent"
+                android:layout_height="72dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/selectLeadLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="72dp"
+                    android:paddingTop="16dp"
+                    android:text="Lead"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp"/>
+
+                <TextView
+                    android:id="@+id/selectLeadValue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="4dp"
+                    android:paddingLeft="72dp"
+                    android:paddingTop="4dp"
+                    android:text="Neutral"
+                    android:textColor="@color/gray"
+                    android:textSize="14sp"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/zipcodeItem"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:gravity="center_vertical|start"
+                android:hint="enter your zipcode"
+                android:paddingLeft="16dp"
+                android:paddingTop="8dp"
+                android:singleLine="true"
+                android:textSize="16sp"/>
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <FrameLayout
+        android:id="@+id/submit_frame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/submit_frame"
-        android:background="?attr/colorPrimaryDark"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:background="?attr/colorPrimaryDark">
 
         <Button
+            android:id="@+id/submit_button"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:text="Submit"
+            android:layout_alignBottom="@+id/frameLayout"
+            android:layout_alignEnd="@+id/linearLayout"
+            android:layout_gravity="right"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:id="@+id/submit_button"
-            android:layout_gravity="right"
-            android:layout_alignBottom="@+id/frameLayout"
-            android:layout_alignEnd="@+id/linearLayout"/>
+            android:text="Submit"/>
     </FrameLayout>
 
 </RelativeLayout>
