--- a/android_app/Watr/app/src/main/res/layout/activity_main.xml
+++ b/android_app/Watr/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main"/>
+    <fragment
+        class="com.google.android.gms.maps.MapFragment"
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/createReportButton"
