--- a/android_app/Watr/app/src/main/res/layout/activity_report.xml
+++ b/android_app/Watr/app/src/main/res/layout/activity_report.xml
@@ -8,7 +8,8 @@
 
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="fill_parent"
+        android:layout_marginBottom="56dp">
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -125,6 +126,36 @@
 
                 <TextView
                     android:id="@+id/selectpHValue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="4dp"
+                    android:paddingLeft="72dp"
+                    android:paddingTop="4dp"
+                    android:text="Neutral"
+                    android:textColor="@color/gray"
+                    android:textSize="14sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+
+                android:id="@+id/selectBacteriaItem"
+                android:layout_width="match_parent"
+                android:layout_height="72dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/selectBacteriaLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="72dp"
+                    android:paddingTop="16dp"
+                    android:text="Bacteria"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp"/>
+
+                <TextView
+                    android:id="@+id/selectBacteriaValue"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="4dp"
